[gd_scene load_steps=116 format=2]

[ext_resource path="res://Player/assets/spriteanimations/Walk (6).png" type="Texture" id=1]
[ext_resource path="res://Player/assets/spriteanimations/Idle (2).png" type="Texture" id=2]
[ext_resource path="res://Player/assets/spriteanimations/Walk (5).png" type="Texture" id=3]
[ext_resource path="res://Player/assets/spriteanimations/Walk (4).png" type="Texture" id=4]
[ext_resource path="res://Player/assets/spriteanimations/Idle (7).png" type="Texture" id=5]
[ext_resource path="res://Player/assets/spriteanimations/Walk (3).png" type="Texture" id=6]
[ext_resource path="res://Player/assets/spriteanimations/Walk (2).png" type="Texture" id=7]
[ext_resource path="res://Player/assets/spriteanimations/Walk (1).png" type="Texture" id=8]
[ext_resource path="res://Player/assets/spriteanimations/Idle (16).png" type="Texture" id=9]
[ext_resource path="res://Player/assets/spriteanimations/Idle (5).png" type="Texture" id=10]
[ext_resource path="res://Player/assets/spriteanimations/Idle (15).png" type="Texture" id=11]
[ext_resource path="res://Player/assets/spriteanimations/Idle (14).png" type="Texture" id=12]
[ext_resource path="res://Player/assets/spriteanimations/Idle (13).png" type="Texture" id=13]
[ext_resource path="res://Player/assets/spriteanimations/Idle (12).png" type="Texture" id=14]
[ext_resource path="res://Player/assets/spriteanimations/Idle (11).png" type="Texture" id=15]
[ext_resource path="res://Player/assets/spriteanimations/Idle (10).png" type="Texture" id=16]
[ext_resource path="res://Player/assets/spriteanimations/Idle (9).png" type="Texture" id=17]
[ext_resource path="res://Player/assets/spriteanimations/Idle (8).png" type="Texture" id=18]
[ext_resource path="res://Player/assets/spriteanimations/Walk (19).png" type="Texture" id=19]
[ext_resource path="res://Player/assets/spriteanimations/Walk (18).png" type="Texture" id=20]
[ext_resource path="res://Player/assets/spriteanimations/Idle (6).png" type="Texture" id=21]
[ext_resource path="res://Player/assets/spriteanimations/Walk (17).png" type="Texture" id=22]
[ext_resource path="res://Player/assets/spriteanimations/Walk (16).png" type="Texture" id=23]
[ext_resource path="res://Player/assets/spriteanimations/Walk (15).png" type="Texture" id=24]
[ext_resource path="res://Player/assets/spriteanimations/Walk (14).png" type="Texture" id=25]
[ext_resource path="res://Player/assets/spriteanimations/Idle (3).png" type="Texture" id=26]
[ext_resource path="res://Player/assets/spriteanimations/Walk (13).png" type="Texture" id=27]
[ext_resource path="res://Player/assets/spriteanimations/Walk (12).png" type="Texture" id=28]
[ext_resource path="res://Player/assets/spriteanimations/Walk (11).png" type="Texture" id=29]
[ext_resource path="res://Player/assets/spriteanimations/Walk (10).png" type="Texture" id=30]
[ext_resource path="res://Player/assets/spriteanimations/Idle (4).png" type="Texture" id=31]
[ext_resource path="res://Player/assets/spriteanimations/Walk (9).png" type="Texture" id=32]
[ext_resource path="res://Player/assets/spriteanimations/Walk (8).png" type="Texture" id=33]
[ext_resource path="res://Player/assets/spriteanimations/Walk (7).png" type="Texture" id=34]
[ext_resource path="res://Player/assets/spriteanimations/Jump (24).png" type="Texture" id=35]
[ext_resource path="res://Player/assets/spriteanimations/Jump (4).png" type="Texture" id=36]
[ext_resource path="res://Player/assets/spriteanimations/Jump (23).png" type="Texture" id=37]
[ext_resource path="res://Player/assets/spriteanimations/Jump (22).png" type="Texture" id=38]
[ext_resource path="res://Player/assets/spriteanimations/Jump (21).png" type="Texture" id=39]
[ext_resource path="res://Player/assets/spriteanimations/Jump (20).png" type="Texture" id=40]
[ext_resource path="res://Player/assets/spriteanimations/Jump (19).png" type="Texture" id=41]
[ext_resource path="res://Player/assets/spriteanimations/Jump (18).png" type="Texture" id=42]
[ext_resource path="res://Player/assets/spriteanimations/Jump (17).png" type="Texture" id=43]
[ext_resource path="res://Player/assets/spriteanimations/Jump (16).png" type="Texture" id=44]
[ext_resource path="res://Player/assets/spriteanimations/Jump (15).png" type="Texture" id=45]
[ext_resource path="res://Player/assets/spriteanimations/Jump (14).png" type="Texture" id=46]
[ext_resource path="res://Player/assets/spriteanimations/Jump (3).png" type="Texture" id=47]
[ext_resource path="res://Player/assets/spriteanimations/Jump (13).png" type="Texture" id=48]
[ext_resource path="res://Player/assets/spriteanimations/Jump (12).png" type="Texture" id=49]
[ext_resource path="res://Player/assets/spriteanimations/Jump (5).png" type="Texture" id=50]
[ext_resource path="res://Player/assets/spriteanimations/Jump (11).png" type="Texture" id=51]
[ext_resource path="res://Player/assets/spriteanimations/Jump (10).png" type="Texture" id=52]
[ext_resource path="res://Player/assets/spriteanimations/Jump (9).png" type="Texture" id=53]
[ext_resource path="res://Player/assets/spriteanimations/Jump (6).png" type="Texture" id=54]
[ext_resource path="res://Player/assets/spriteanimations/Jump (8).png" type="Texture" id=55]
[ext_resource path="res://Player/assets/spriteanimations/Jump (7).png" type="Texture" id=56]
[ext_resource path="res://Player/assets/spriteanimations/Jump (25).png" type="Texture" id=57]
[ext_resource path="res://Player/assets/spriteanimations/Jump (30).png" type="Texture" id=58]
[ext_resource path="res://Player/assets/spriteanimations/Jump (29).png" type="Texture" id=59]
[ext_resource path="res://Player/assets/spriteanimations/Jump (28).png" type="Texture" id=60]
[ext_resource path="res://Player/assets/spriteanimations/Jump (27).png" type="Texture" id=61]
[ext_resource path="res://Player/assets/spriteanimations/Jump (26).png" type="Texture" id=62]
[ext_resource path="res://Player/assets/spriteanimations/qsstart.png" type="Texture" id=63]
[ext_resource path="res://Player/assets/audio/60013__qubodup__whoosh.wav" type="AudioStream" id=64]
[ext_resource path="res://Player/assets/audio/455459__milankovanda__fireworks-in-background.wav" type="AudioStream" id=65]
[ext_resource path="res://Player/assets/audio/413203__joepayne__clean-and-pompous-fanfare-trumpet.mp3" type="AudioStream" id=66]
[ext_resource path="res://Player/assets/spriteanimations/Walk (20).png" type="Texture" id=67]
[ext_resource path="res://Player/assets/spriteanimations/Run (1).png" type="Texture" id=68]
[ext_resource path="res://Player/assets/spriteanimations/Run (2).png" type="Texture" id=69]
[ext_resource path="res://Player/assets/spriteanimations/Run (3).png" type="Texture" id=70]
[ext_resource path="res://Player/assets/spriteanimations/Run (4).png" type="Texture" id=71]
[ext_resource path="res://Player/assets/spriteanimations/Idle (1).png" type="Texture" id=72]
[ext_resource path="res://Player/assets/spriteanimations/Run (5).png" type="Texture" id=73]
[ext_resource path="res://Player/assets/spriteanimations/Run (6).png" type="Texture" id=74]
[ext_resource path="res://Player/assets/spriteanimations/Run (7).png" type="Texture" id=75]
[ext_resource path="res://Player/assets/spriteanimations/Run (8).png" type="Texture" id=76]
[ext_resource path="res://Player/assets/spriteanimations/Run (9).png" type="Texture" id=77]
[ext_resource path="res://Player/assets/spriteanimations/Run (10).png" type="Texture" id=78]
[ext_resource path="res://Player/assets/spriteanimations/Run (11).png" type="Texture" id=79]
[ext_resource path="res://Player/assets/spriteanimations/Run (12).png" type="Texture" id=80]
[ext_resource path="res://Player/assets/spriteanimations/Run (13).png" type="Texture" id=81]
[ext_resource path="res://Player/assets/spriteanimations/Run (14).png" type="Texture" id=82]
[ext_resource path="res://Player/assets/spriteanimations/Run (15).png" type="Texture" id=83]
[ext_resource path="res://Player/assets/spriteanimations/Run (16).png" type="Texture" id=84]
[ext_resource path="res://Player/assets/spriteanimations/Run (17).png" type="Texture" id=85]
[ext_resource path="res://Player/assets/spriteanimations/Run (18).png" type="Texture" id=86]
[ext_resource path="res://Player/assets/spriteanimations/Run (19).png" type="Texture" id=87]
[ext_resource path="res://Player/assets/spriteanimations/Run (20).png" type="Texture" id=88]
[ext_resource path="res://Player/assets/spriteanimations/Jump (1).png" type="Texture" id=89]
[ext_resource path="res://Player/assets/spriteanimations/Jump (2).png" type="Texture" id=90]
[ext_resource path="res://Player/Player3.gd" type="Script" id=91]
[ext_resource path="res://Player/assets/audio/FireWorks-Double-Pop-www.fesliyanstudios.com.mp3" type="AudioStream" id=92]
[ext_resource path="res://Player/assets/audio/Fireworks-Crackling-www.fesliyanstudios.com.mp3" type="AudioStream" id=93]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15.5644, 32.594 )

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 0.563636 ), 0.0, 0.411605, 0, 0, Vector2( 1, 0.459091 ), -7.69871, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=3]
curve = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 120, 0 )
initial_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -40.0
damping = 100.0
damping_random = 0.15
scale = 2.0
scale_random = 0.25
scale_curve = SubResource( 3 )
color = Color( 0, 1, 0.109804, 1 )
hue_variation = 0.25
hue_variation_random = 0.5

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=6]
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 120, 0 )
initial_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -40.0
damping = 100.0
damping_random = 0.15
scale = 2.0
scale_random = 0.25
scale_curve = SubResource( 5 )
color = Color( 1, 0.447059, 0, 1 )
hue_variation = 0.2
hue_variation_random = 0.5

[sub_resource type="CurveTexture" id=7]
curve = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=8]
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 120, 0 )
initial_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -40.0
damping = 100.0
damping_random = 0.15
scale = 2.0
scale_random = 0.25
scale_curve = SubResource( 7 )
color = Color( 0, 1, 0.976471, 1 )
hue_variation = 0.25
hue_variation_random = 0.5

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ ExtResource( 72 ), ExtResource( 2 ), ExtResource( 26 ), ExtResource( 31 ), ExtResource( 10 ), ExtResource( 21 ), ExtResource( 5 ), ExtResource( 18 ), ExtResource( 17 ), ExtResource( 16 ), ExtResource( 15 ), ExtResource( 14 ), ExtResource( 13 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 9 ) ],
"loop": false,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 89 ), ExtResource( 90 ), ExtResource( 47 ), ExtResource( 36 ), ExtResource( 50 ), ExtResource( 54 ), ExtResource( 56 ), ExtResource( 55 ), ExtResource( 53 ), ExtResource( 52 ), ExtResource( 51 ), ExtResource( 49 ), ExtResource( 48 ), ExtResource( 46 ), ExtResource( 45 ), ExtResource( 44 ), ExtResource( 43 ), ExtResource( 42 ), ExtResource( 41 ), ExtResource( 40 ), ExtResource( 39 ), ExtResource( 38 ), ExtResource( 37 ), ExtResource( 35 ), ExtResource( 57 ), ExtResource( 62 ), ExtResource( 61 ), ExtResource( 60 ), ExtResource( 59 ), ExtResource( 58 ) ],
"loop": true,
"name": "jump",
"speed": 20.0
}, {
"frames": [ ExtResource( 68 ), ExtResource( 69 ), ExtResource( 70 ), ExtResource( 71 ), ExtResource( 73 ), ExtResource( 74 ), ExtResource( 75 ), ExtResource( 76 ), ExtResource( 77 ), ExtResource( 78 ), ExtResource( 79 ), ExtResource( 80 ), ExtResource( 81 ), ExtResource( 82 ), ExtResource( 83 ), ExtResource( 84 ), ExtResource( 85 ), ExtResource( 86 ), ExtResource( 87 ), ExtResource( 88 ) ],
"loop": true,
"name": "run",
"speed": 20.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 1 ), ExtResource( 34 ), ExtResource( 33 ), ExtResource( 32 ), ExtResource( 30 ), ExtResource( 29 ), ExtResource( 28 ), ExtResource( 27 ), ExtResource( 25 ), ExtResource( 24 ), ExtResource( 23 ), ExtResource( 22 ), ExtResource( 20 ), ExtResource( 19 ), ExtResource( 67 ) ],
"loop": true,
"name": "walk",
"speed": 20.0
} ]

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 63 )
region = Rect2( 0, 0, 896, 753 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 63 )
region = Rect2( 896, 0, 896, 753 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 63 )
region = Rect2( 1792, 0, 896, 753 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 63 )
region = Rect2( 2688, 0, 896, 753 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 63 )
region = Rect2( 3584, 0, 896, 753 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 63 )
region = Rect2( 4480, 0, 896, 753 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 63 )
region = Rect2( 0, 753, 896, 753 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 63 )
region = Rect2( 896, 753, 896, 753 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 63 )
region = Rect2( 1792, 753, 896, 753 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 63 )
region = Rect2( 2688, 753, 896, 753 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 63 )
region = Rect2( 3584, 753, 896, 753 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 63 )
region = Rect2( 4480, 753, 896, 753 )

[sub_resource type="SpriteFrames" id=22]
animations = [ {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": false,
"name": "default",
"speed": 30.0
} ]

[node name="Node" type="KinematicBody2D"]
position = Vector2( 198.185, 227.959 )
script = ExtResource( 91 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 5.89963, 11.3482 )
shape = SubResource( 1 )

[node name="CelebrateFireworkBurst" type="Particles2D" parent="." groups=[
"CelebrateFireworksParticles",
]]
position = Vector2( -35.1395, -61.9287 )
emitting = false
lifetime = 0.5
explosiveness = 1.0
randomness = 1.0
process_material = SubResource( 4 )

[node name="CelebrateFireworkBurst2" type="Particles2D" parent="." groups=[
"CelebrateFireworksParticles",
]]
position = Vector2( 22.5695, -82.5394 )
emitting = false
lifetime = 0.45
explosiveness = 1.0
randomness = 1.0
process_material = SubResource( 6 )

[node name="CelebrateFireworkBurst3" type="Particles2D" parent="." groups=[
"CelebrateFireworksParticles",
]]
position = Vector2( 38.7139, -43.3204 )
emitting = false
lifetime = 0.6
explosiveness = 1.0
process_material = SubResource( 8 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 9 )
animation = "idle"

[node name="FireworkSounds" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 65 )
volume_db = 2.145

[node name="Fanfare" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 66 )

[node name="qswhoosh" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 64 )

[node name="quickstepexit" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 44.2215, 18.1989 )
scale = Vector2( 0.271169, 0.271169 )
frames = SubResource( 22 )

[node name="FireworksCracking" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 93 )

[node name="FireworksDouble" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 92 )

[connection signal="animation_finished" from="quickstepexit" to="." method="_on_quickstepexit_animation_finished"]
